fixed vertical spacing on experience page

--- a/style.css
+++ b/style.css
@@ -166,8 +166,8 @@ header {
     width: 100%;
     max-width: 860px;
     max-height: 400px;
-    margin: 0 auto;
-    padding: 20px 50px 50px;
+    margin: 0 auto 50px;
+    padding: 20px 50px 30px;
     text-decoration: none;
     display: flex;
     flex-direction: column;
